@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2023-09-09T08:09:09Z",
+  "timestamp" : "2023-09-09T16:08:22Z",
   "count_outdated" : 5039,
   "uniques_outdated" : 1552,
-  "count" : 5070,
+  "count" : 5071,
   "uniques" : 1572,
   "clones" : [
     {
@@ -115,9 +115,9 @@
     },
     {
       "timestamp": "2023-09-09T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
+      "count_decinc": [ 0, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
